# AI_brain_Huongasu

./: .gitignore  AGENTS.md  HuongDan_LuuTru_TaiLieu.md  README-vi.md  README.md  pyproject.toml  sync-brain.ps1  update.py
.agents/workflows/: breakdown.md  compile.md  startup.md  wrapup.md
_templates/: Template_HanhTrinh_DuAn.md  Template_HanhTrinh_Hub.md  Template_KhoaHoc.md
brain_cli/: __init__.py  __main__.py  cli.py
integrations/claude-code/: .gitkeep
integrations/gemini-cli/: .gitkeep
integrations/hermes/: README.md  SKILL.md  SOUL-snippet.md
integrations/hermes/docker/: entrypoint-snippet.sh
integrations/hermes/examples/: briefing-example.md  cron-config.yaml
integrations/hermes/scripts/: generate_briefing.py  sync-brain.ps1  sync-brain.sh  sync_brain.py
integrations/mcp/: README.md  config-sample.json  server.py
scripts/: audit.py  brain.py  brain_db.py  build_search_index.py  ingest_codebase.py  mark_duplicates.py  resolve_orphans.py  search_sessions.py
wiki/: _absorb_log.json  _build_graph.py  _glossary.md  _index.md  _ops_log.md  _purpose.md
