[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-brain"
version = "1.0.0"
description = "CLI tool for LLM Wiki Template — AI-managed Second Brain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["llm", "wiki", "second-brain", "obsidian", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
brain = "brain_cli.cli:main"

[project.urls]
Homepage = "https://github.com/KHOAAI-HILL/llm-wiki-template"
Repository = "https://github.com/KHOAAI-HILL/llm-wiki-template"

[tool.setuptools.packages.find]
include = ["brain_cli*"]
